Made only config section sticky on site to make room on mobile devices. Formatted top totals component to fit nicer on smaller screens. Fixed issue with first tick showing up darker than others. Fixed a few minor spelling errors.

--- a/src/components/chart-config/chart-config.css
+++ b/src/components/chart-config/chart-config.css
@@ -1,8 +1,10 @@
 .chart-configuration {
     border: 0px;
-    background-color: #2c4d4dd1;
+    background-color: #2c4d4d;
     padding: 5px 0 5px 0;
-    
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
 }
 
 .config-section-text {
