--- a/src/components/data-totals/data-totals.css
+++ b/src/components/data-totals/data-totals.css
@@ -25,10 +25,10 @@
 
 .data-row {
     display: inline-block;
-    text-align: left;
+    text-align: center;
     height: 100px;
     max-width: 200px;
-    min-width: 160px;
+    min-width: 130px;
     border: .5px solid silver;
     padding: 10px 5px;
     margin: 3px;
